# arboreal

./: .gitignore  .travis.yml  README.md  setup.cfg  todo
examples/: github.scraper  headlines-csv.scraper  headlines.scraper  nos.yaml  present.py  readme-examples.py  scrape.py  scraping.py
src/: arboral.py
tests/: test_arborial.py
