[metadata]
name = arboral
version = 0.0.1
author = Bastiaan van der Weij
author_email = bv@nderweij.nl
description = "A package for domain-specific languages"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjvanderweij/arboral
project_urls = 
    Bug Tracker = https://github.com/bjvanderweij/arboral/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
